# rotation

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  docker-compose.yml  package.json  schema.sql  tailwind.config.ts
assets/: tailwind.css
certs/: cert.pem  key.pem
frontend/: Cargo.toml  Dioxus.toml  bun.lockb  input.css  tailwind.config.ts
frontend/assets/: tailwind.css
frontend/src/: main.rs
frontend/src/components/: mod.rs  navbar.rs
frontend/src/components/theme_provider/: mod.rs
frontend/src/views/: blog.rs  home.rs
src/: config.rs  main.rs  types.rs
src/repo/: mod.rs
src/server/: mod.rs
